--- a/src/resources/css/bio.css
+++ b/src/resources/css/bio.css
@@ -1,13 +1,45 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 
+@font-face {
+    font-family:'cursiva';
+    src: url('/src/resources/fonts/home/Sunday\ Gallery.otf') format('opentype');
+}
+
 body {
     background: url('/src/resources/images/bio/zyro-image.png');
     font-family: 'Poppins', sans-serif;
     display: flex;
     justify-content: center;
-    align-items: end;
+    align-items: center;
     color: white;
 }
+
 .glass {
-    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 360px;
+    height: 585px;
+    width: 100vw;
+
+    background: rgba( 255, 255, 255, 0.2 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
+    border-radius: 10px;  
+}
+
+h1 {
+    color: black;
+    font-family: 'cursiva', sans-serif;
+    margin-bottom: 0;
+    font-family: 'cursiva', Helvetica, sans-serif;
+    font-size: 90px;
+    margin-bottom: 0px;
+    margin-top: 5px;
+    letter-spacing: 10px;
+}
+h3 {
+    margin-top: 0;
+    color: black;
 }
