--- a/src/resources/css/bio.css
+++ b/src/resources/css/bio.css
@@ -6,27 +6,23 @@
 }
 
 body {
-    background: url('/src/resources/images/bio/zyro-image.png');
+    background-color: rgb(232,236,239);
     font-family: 'Poppins', sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
-    color: white;
+    flex-direction: column;
+    color: black;
 }
 
-.glass {
+ .glass {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 360px;
-    height: 585px;
+    margin-top: 0px;
+    height: 610px;
     width: 100vw;
 
-    background: rgba( 255, 255, 255, 0.2 );
-    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-    backdrop-filter: blur( 4px );
-    -webkit-backdrop-filter: blur( 4px );
-    border-radius: 10px;  
 }
 
 h1 {
@@ -42,4 +38,50 @@ h1 {
 h3 {
     margin-top: 0;
     color: black;
+}
+
+p {
+    margin-left: 50px;
+    margin-right: 50px;
+    color: black;
+} 
+
+/*HEADER*/
+header ul {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    list-style: none;
+
+}
+
+li {
+    padding-right: 50px;
+    font-size: 17px;
+}
+li:hover {
+    transform: scale(1.2);
+    transition: 0.5s all;
+}
+
+header a {
+    text-decoration: none;
+    color: black;
+
+}
+
+
+.iconess {
+    width: 17px;
+    height: 17px;
+    padding-top: 1px;
+}
+
+a li span {
+    text-decoration: underline;
+}
+
+header {
+    height: 80px;
 }
