--- a/src/resources/css/bio.css
+++ b/src/resources/css/bio.css
@@ -21,7 +21,7 @@ body {
     align-items: center;
     padding: 15px;
     margin: 0;
-    height: 100%;
+    height: 412px;
     width: 1300px;
 
     background: rgba( 232, 236, 239, 0.4 );
@@ -49,6 +49,7 @@ ansaide {
     flex-direction: column;
     padding-right: 10px;
     border-right: 2px solid black;
+    height: 96%;
 }
 
 .box a  {
@@ -130,6 +131,11 @@ ansaide h1 {
 
 h3 {
     margin: 0;
+}
+
+.botoes {
+    padding-top: 20%;
+    display: flex;
 }
 
 
