--- a/src/resources/css/bio.css
+++ b/src/resources/css/bio.css
@@ -2,7 +2,7 @@
 
 @font-face {
     font-family:'cursiva';
-    src: url('/src/resources/fonts/home/Sunday\ Gallery.otf') format('opentype');
+    src: url('../fonts/home/Sunday\ Gallery.otf') format('opentype');
 }
 
 body {
